--- a/primena.html
+++ b/primena.html
@@ -128,7 +128,12 @@
           <span>office@marco.rs</span><br />
         </div>
       </div>
+
       <p class="prava">2023 © MAR&CO sva prava zadržana</p>
+      <p class="prava">
+        <a href="matejakecman/sitemap.xml">Sitemap</a>
+        <a href="matejakecman/rss.xml"> RSS</a>
+      </p>
       <p class="prava">
         Site design - <a href="designer.html">Mateja Kecman</a>
       </p>
