--- a/designer.html
+++ b/designer.html
@@ -77,6 +77,10 @@
       </div>
       <p class="prava">2023 © MAR&CO sva prava zadržana</p>
       <p class="prava">
+        <a href="matejakecman/sitemap.xml">Sitemap</a>
+        <a href="matejakecman/rss.xml"> RSS</a>
+      </p>
+      <p class="prava">
         Site design - <a href="designer.html">Mateja Kecman</a>
       </p>
     </section>
