--- a/Proizvodi.html
+++ b/Proizvodi.html
@@ -121,8 +121,8 @@
       </div>
       <p class="prava">2023 © MAR&CO sva prava zadržana</p>
       <p class="prava">
-        <a href="matejakecman/sitemap.xml">Sitemap</a>
-        <a href="matejakecman/rss.xml"> RSS</a>
+        <a href="/matejakecman/sitemap.xml">Sitemap</a>
+        <a href="/matejakecman/rss.xml"> RSS</a>
       </p>
       <p class="prava">
         Site design - <a href="designer.html">Mateja Kecman</a>
